--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -14,10 +14,10 @@
   .modal {
     background-color: #ffffff;
     padding: 25px;
-    border-radius: 12px; /* Bordes redondeados */
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
+    border-radius: 12px; 
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); 
     width: 400px;
-    max-width: 90%; /* Responsivo */
+    max-width: 90%;
   }
   
   .modal h2 {
@@ -43,7 +43,7 @@
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 8px; /* Bordes redondeados */
+    border-radius: 8px; 
     font-size: 1rem;
     outline: none;
     transition: border-color 0.3s;
@@ -51,11 +51,11 @@
   
   .form-group input:focus,
   .form-group textarea:focus {
-    border-color: #0079bf; /* Color al enfoque */
+    border-color: #0079bf; 
   }
   
   textarea {
-    resize: vertical; /* Permitir solo redimensionamiento vertical */
+    resize: vertical; 
   }
   
   .submit-button,
@@ -90,7 +90,7 @@
   
   .button-container {
     display: flex;
-    justify-content: flex-end; /* Alinear botones a la derecha */
+    justify-content: flex-end; 
   }
   
   .form-group select,
@@ -123,8 +123,8 @@
   padding: 20px;
   width: 90%;
   max-width: 600px;
-  max-height: 80vh; /* Limita la altura máxima */
-  overflow-y: auto; /* Agrega un scroll vertical si es necesario */
+  max-height: 80vh; 
+  overflow-y: auto; 
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
