--- a/src/styles/Tasks.css
+++ b/src/styles/Tasks.css
@@ -67,3 +67,16 @@
 body{
   overflow: hidden;
 }
+
+.filter-row {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.filter-row input {
+  padding: 8px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 16px;
+}
